# Kite-Arcade

./: .gitignore  README.md  main.py  pyproject.toml
src/: game.py
src/game_input/: __init__.py  event.py
src/game_input/methods/: __init__.py  base.py  keyboard.py
src/gui/: __init__.py  element.py  navigation.py
src/gui/buttons/: __init__.py  root_button.py
